src/App.scss
/* ... */
.banner {
  font-size: 0.75rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 1rem;

  background: var(--red-light);
  color: var(--red);
  font-weight: 600;

  svg {
    min-width: fit-content; // so that flex will not shrink the svg
    // also could have been solved by wrapping avg in div.
  }

  p {
    text-align: center;
  }

  a {
    text-decoration: none;
    color: var(--red);
    display: flex;
    align-items: center;
    white-space: nowrap;
    background: var(--red-light);

    &:hover {
      background: var(--red-hover);
    }
    svg {
      vertical-align: text-bottom;
    }
  }
}

// footer
footer {
  // all centering together 😄
  align-self: center; // for centering self in flex container
  text-align: center; // text will be centered
  align-items: center; // all child will be centered

  padding: 4rem 0;
  margin-top: auto;
  display: flex;
  flex-direction: column;
  .footer__title {
    font-weight: 900;
    text-transform: uppercase;
    color: var(--blue);
    background-color: var(--blue-light);
  }

  h5 {
    margin: 0;
    color: var(--gray);
  }

  .footer__links {
    display: flex;
    gap: 1rem;
    margin: 2rem;
  }
}

// *************************************************************************************************
// re-write needed!!!
.main {
  .map-container {
    display: flex;
    justify-content: center;
    margin: 4rem 0;
  }

  width: calc(100% - 2rem);
  margin: 1rem auto;
  .table {
    display: grid;
    // grid-template-columns: repeat(var(--columns), max-content);
    justify-content: center;
    grid-template-columns: repeat(var(--columns), min-content);
    gap: 0.25rem;
    color: var(--gray);
    max-width: 100vw;
    overflow-x: auto;
    font-size: 0.8125rem;

    .row {
      display: contents;

      .cell {
        // background: var(--dark-m-gray);
        display: flex;
        flex-direction: column;
        border-radius: 3px;
        padding: 0.4rem;
      }

      // top row
      &.row--header {
        .cell--statistic {
          cursor: pointer;
          position: relative;
          padding-top: 1rem;
          .sort-icon {
            position: absolute;
            top: 0.25rem;
            right: 0.25rem;
            line-height: 0;
          }
          &:not(:first-child) {
            text-align: right;
          }
        }
      }

      // data row
      &.row--detail {
        // odd rows
        &:nth-child(odd) {
          .cell--detail {
            background: var(--gray-light);
          }
        }

        .cell--detail {
          text-align: right;
          justify-content: flex-end;
          font-size: 0.875rem;
          .delta {
            font-size: 0.9em;
          }
        }
        // state name cell
      }
    }

    .row--header .cell:first-child,
    .row--detail .cell--state-header {
      position: sticky;
      left: 0;
      z-index: 10;
    }

    .row--header .cell--statistic,
    .row--detail .cell--state-header // state name cell
    {
      font-weight: 900;
      background: var(--gray-light-opaque);
      justify-content: center;
    }

    // table colors
    .is-confirmed {
      color: var(--cherry);
    }
    .is-active {
      color: var(--blue);
    }
    .is-recovered {
      color: var(--green);
    }
    .is-deceased {
      color: var(--gray);
    }
    .is-tested {
      color: var(--purple);
    }
    .is-vaccinated,
    .is-vaccinated1,
    .is-vaccinated2 {
      color: var(--pink);
    }
  }
}

/*************************************************************************************************/

// DARK MODE
.dark-mode {
  background: var(--dark-m-gray) !important;
  color: var(--dark-m-text-color) !important;

  .navbar-container,
  .navbar__menu,
  .volunteers__container__item,
  .row--header .cell--statistic,
  .row--detail .cell--state-header // state name cell
  {
    background: var(--dark-m-gray-light) !important;
  }

  .last {
    .volunteers__container__item {
      &:nth-child(2) {
        background-color: var(--dark-m-gray) !important;
      }
    }
  }
  .table-loader {
    rect {
      fill: var(--dark-m-gray-light) !important;
    }
  }
}

/*************************************************************************************************/

// for every background color change there will be transition, but it causes flash on start :(
// body,
// body * {
//   transition: background 200ms linear;
// }

// animations
.fadeInAnimation {
  animation: fadeInAnimation 0.5s;
}

@keyframes fadeInAnimation {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.fadeInDownAnimation {
  animation: fadeInDownAnimation 0.5s;
}

@keyframes fadeInDownAnimation {
  from {
    opacity: 0;
    transform: translateY(-20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.fadeInUpAnimation {
  animation: fadeInUpAnimation 0.5s;
}

@keyframes fadeInUpAnimation {
  from {
    opacity: 0;
    transform: translateY(20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

/*************************************************************************************************/

// Media Queries.
@media (max-width: 768px) {
  .navbar__menu {
    overflow: auto; // so content does not overflow while animation!!!
  }
}
/* ... */

